// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyInput should adjust input padding and suffix width to match currency symbol width 1`] = `
.circuit-1 {
  display: block;
  font-size: 14px;
  line-height: 20px;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  line-height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  color: #666;
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-6 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  text-align: right;
  padding-left: 48px;
  box-shadow: 0 0 0 1px #999;
}

.circuit-6::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-6:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-6:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_4"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Amount
    </span>
    <div
      class="circuit-4"
    >
      <span
        class="circuit-5"
      >
        CHF
      </span>
      <input
        class="circuit-6"
        id="input_4"
        inputmode="decimal"
        placeholder="123,45"
        type="text"
        value=""
      />
    </div>
  </label>
</div>
`;

exports[`CurrencyInput should render with default styles 1`] = `
.circuit-1 {
  display: block;
  font-size: 14px;
  line-height: 20px;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  line-height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  color: #666;
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-6 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  text-align: right;
  padding-left: 48px;
  box-shadow: 0 0 0 1px #999;
}

.circuit-6::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-6:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-6:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="input_2"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Amount
    </span>
    <div
      class="circuit-4"
    >
      <span
        class="circuit-5"
      >
        €
      </span>
      <input
        class="circuit-6"
        id="input_2"
        inputmode="decimal"
        type="text"
        value=""
      />
    </div>
  </label>
</div>
`;
